--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
 <body>
   <h1>JavaScript Quiz</h1>
 
-  <div id="question-container">
+  <button id="start-btn">Start Quiz</button>
+
+  <div id="question-container" class="hidden">
     <h2 id="question"></h2>
     <ul id="options">
       <!-- Options generated using JavaScript -->
     </ul>
   </div>
+
+  <div id="feedback"></div>
 
   <div id="timer-container">
     Time remaining: <span id="timer">0</span>
@@ -25,6 +29,7 @@
     </ol>
   </div>
 
+  <h6>Questions came from <a href="https://www.interviewbit.com/javascript-mcq/">HERE</a> </h6>
   <script src="./assets/script.js"></script>
 </body>
 </html>
